--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="js/controllers/charts.js"></script>
   <script type="text/javascript" src="js/controllers/map.js"></script>
   <script defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAd615MbBmB3MzWbj4UPP7mnaBuy00Wmas"></script>
+  <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.js"></script>
 </head>
 <body>
   <div class="navbar-fixed">
