--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers/charts.js"></script>
   <script type="text/javascript" src="js/controllers/map.js"></script>
-  <script defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAd615MbBmB3MzWbj4UPP7mnaBuy00Wmas"></script>
+  <script defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAd615MbBmB3MzWbj4UPP7mnaBuy00Wmas?sensor=false"></script>
 </head>
 <body>
   <div class="navbar-fixed">
